--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "nextn",
   "version": "0.1.0",
@@ -35,6 +36,7 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "aos": "^2.3.4",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -49,8 +51,10 @@
     "next": "15.3.3",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
+    "react-chord-diagram": "1.8.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-grid-heatmap": "^1.3.0",
     "react-hook-form": "^7.54.2",
     "react-select": "^5.10.1",
     "recharts": "^2.15.4",
@@ -59,6 +63,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -66,5 +71,11 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "overrides": {
+    "react-chord-diagram": {
+      "react": "$react",
+      "react-dom": "$react-dom"
+    }
   }
 }
