--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "nextn",
   "version": "0.1.0",
@@ -56,6 +55,7 @@
     "react-dom": "^18.3.1",
     "react-grid-heatmap": "^1.3.0",
     "react-hook-form": "^7.54.2",
+    "react-icons": "^5.5.0",
     "react-select": "^5.10.1",
     "recharts": "^2.15.4",
     "tailwind-merge": "^3.0.1",
